<resources>
    <string name="app_name">Thoth</string>
    <string name="content_sign_up">Kayıt Ol</string>
    <string name="content_forgot_password">Şifremi Unuttum</string>
    <string name="error_network_connection">İnternet bağlantınızda bir sorun var. Lütfen bağlantınızı kontrol edip tekrar deneyiniz.</string>
    <string name="try_again">Tekrar Dene</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_login">Giriş Yap</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Şifre</string>
    <string name="error_login">Bir sorun oluştu. Giriş yapılamadı lütfen tekrar deneyiniz.</string>
    <string name="error_email_empty">Lütfen e-mail adresinizi giriniz.</string>
    <string name="error_password_empty">Lütfen şifrenizi giriniz.</string>
    <string name="action_next">İleri</string>
    <string name="error_email_check">E-mail adresiniz doğrulanırken bir sorun oluştu lütfen tekrar deneyiniz.</string>
    <string name="error_username_check">Kullanıcı adınız doğrulanırken bir sorun oluştu lütfen tekrar deneyiniz.</string>
    <string name="error_email_already_registered">Bu e-mail adresi zaten kullanımda.</string>
    <string name="error_username_already_registered">Bu kullanıcı adı zaten kullanımda.</string>
    <string name="error_register_network">Kayıt sırasında bir sorun oluştu. Lütfen Tekrar deneyiniz.</string>
    <string name="content_homepage">Anasayfa</string>
    <string name="content_notifications">Bildirimler</string>
    <string name="content_messages">Mesajlar</string>
    <string name="content_profile">Profilim</string>
    <string name="ask_question">Yeni Soru Sor</string>
    <string name="desc_back_button">Bir önceki sayfaya dön.</string>
    <string name="desc_add_photo_to_your_question">Soruna bir fotoğraf eklemek için dokun...</string>
    <string name="question_title">Soru Başlığı (isteğe bağlı)</string>
    <string name="question_description">Soru Açıklaması (isteğe bağlı)</string>
    <string name="settings">Ayarlar</string>
    <string name="denied_permission_message">Kamera ve depolama izinlerini kabul etmezseniz bir soru paylaşamayacaksınız. İzinleri daha sonra ayalardan değiştirebilirsiniz.</string>
    <string name="error_category_list_cant_load">Bir sorun oluştu ve kategori listesi yüklenmedi.</string>
    <string name="action_send_question">Gönder</string>
    <string name="msg_please_wait">Lütfen bekleyeniz...</string>
    <string name="msg_image_uploading">Resim yükleniyor</string>
    <string name="error_unselected_category">Sorunuz için en az bir tag seçmelisiniz.</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="error_username_empty">Lütfen bir kullanıcı adı giriniz.</string>
    <string name="edit_photo">Fotoğrafı Düzenle</string>
    <string name="error_question_upload">Sorunuz yüklenirken bir sorun oluştu. Lütfen tekrar deneyiniz.</string>
    <string name="answer">Cevap</string>
    <string name="bookmark">Takip</string>
    <string name="report">Şikayet Et</string>
    <string name="share">Paylaş</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="answer_question">Cevapla</string>
    <string name="question_detail">Soru Detayı</string>
    <string name="answers">CEVAPLAR</string>
    <string name="error_question_follow">Bir sorun oluştu ve  bu soru takip listenize eklenemedi. Lütfen tekrar deneyiniz.</string>
    <string name="answer_the_question">Soruyu Cevapla</string>
    <string name="desc_add_photo_to_your_answer">Cevabına bir fotoğraf eklemek için dokun...</string>
    <string name="answer_description">Cevap açıklaması (isteğe bağlı)</string>
    <string name="action_send_answer">Gönder</string>
    <string name="error_send_answer">Cevabınız gönderilirken bir sorun oluştu. Lütfen tekrar deneyiniz.</string>
    <string name="answer_loading">Cevabınız yükleniyor lütfen bekleyiniz.</string>
    <string name="error_answer_null_check">Cevabınızı gönderebilmek için bir cevap metni veya bir fotoğraf yükleyiniz.</string>
    <string name="error_question_detail_update">Bir sorun oluştu ve soru bilgisi güncellenemedi.</string>
    <string name="desc_report">Şikayet sebebinizi kısaca açıklayabilirsiniz. (isteğe bağlı)</string>
    <string name="send_report">Şikayet Et</string>
    <string name="cancel">Vazgeç</string>
    <string name="desc_report_and_block">Bu kullanıcıyı engelle.</string>
    <string name="desc_report_sub">(Bu kullanıcıdan gelen paylaşımları, cevapları göremeyeceksiniz.)</string>
    <string name="delete_question">Soruyu Sil</string>
    <string name="delete_answer">Cevabi Sil</string>
    <string name="error_question_report">Üzgünüm şikayetiniz iletilemedi. Lütfen tekrar deneyiniz.</string>
    <string name="error_question_delete">Üzgünüm sorunuz silinemedi. Lütfen tekrar deneyiniz.</string>
    <string name="ok">Tamam</string>
    <string name="msg_report_sended">Şikayetiniz iletildi. İlginiz için teşekkür ederiz.</string>
    <string name="msg_question_deleted">Sorunuz başarıyla silindi.</string>
    <string name="error_question_detail_load">Soru bilgileri ve cevaplari yüklenemedi. Lütfen tekrar deneyeiniz.</string>
    <string name="error_delete_answer">Üzgünüz cevabınız şuanda silinemedi. Lütfen terkar deneyiniz.</string>
    <string name="error_answer_report">Üzgünüz şuanda şikayetiniz iletilemedi. Lütfen tekrar deneyiniz.</string>
    <string name="content_write_message">Mesaj yazın</string>
    <string name="disconnect">Disconnected!</string>
    <string name="error_connect">Error Connect</string>
    <string name="title_notifications">Bildirimler</string>

</resources>
