<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/dark_background_question_list"
        android:orientation="vertical"
        android:padding="@dimen/margin_form_little"
        tools:context="com.devfie.thoth.report.ReportDialogFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            fontPath = "fonts/Lato-Bold.ttf"

            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_form_little"
            android:gravity="center_horizontal"
            android:minWidth="280dp"
            android:text="@string/report"
            android:textColor="@color/dark_text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtReportDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_form_little"
            android:layout_marginStart="@dimen/margin_form_little"
            android:layout_marginTop="@dimen/margin_form"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/desc_report"
            android:lines="3"
            android:maxLines="3"
            android:padding="@dimen/margin_form_little"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/cbReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_form_little"
            android:text="@string/desc_report_and_block"
            android:textColor="@color/dark_text_color" />
        <TextView
            fontPath = "fonts/Lato-LightItalic.ttf"
            android:gravity="center"
            android:textSize="13.5sp"
            android:text="@string/desc_report_sub"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                fontPath = "fonts/Lato-Medium.ttf"
                android:id="@+id/btnCancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_little"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                fontPath = "fonts/Lato-Medium.ttf"
                android:id="@+id/btnSendReport"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_form_little"
                android:text="@string/send_report"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

</layout>

