<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/desc_back_button"
        android:padding="10dp"
        android:tint="@color/darker_white"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />



    <Button
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:id="@+id/btnNext"
        android:textColor="@color/darker_white"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/action_next"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:paddingLeft="8dp"
        android:layout_toStartOf="@id/btnNext"
        android:layout_toEndOf="@id/btnBack"
        fontPath="fonts/Lato-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/ask_question"
        android:textColor="@color/darker_white"
        android:textSize="18sp" />
</RelativeLayout>