<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.devfie.thoth.register.RegisterFirstStepFragment">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/margin_form"
            android:src="@drawable/ic_arrow_back" />
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_text_color"
            android:textSize="30sp"
            fontPath="fonts/Pacifico-Regular.ttf"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:background="@drawable/bg_login_form_edt"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/dark_text_color"
            android:textColorHint="@color/hint_grey"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_form"
            android:background="@drawable/bg_login_button"
            android:minWidth="180dp"
            android:text="@string/content_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/darker_white"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>

