<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:padding="10dp"
        tools:context="com.devfie.thoth.askquestion.AskQuestionFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/questionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/touth_card_background"
                android:elevation="4dp"
                android:padding="1dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_add_a_photo_black_36dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/desc_add_photo_to_your_question"
                    android:textColor="@color/dark_text_color"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imgQuestionPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="fitXY" />

            </FrameLayout>


            <EditText
                android:id="@+id/edtQuestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/question_title"
                android:imeOptions="actionNext"
                android:inputType="textAutoCorrect|textEmailSubject"
                android:maxLines="1"
                android:textColor="@color/dark_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtQuestionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/question_description"
                android:imeOptions="actionGo"
                android:inputType="textAutoCorrect|textLongMessage|textMultiLine"
                android:textColor="@color/dark_text_color"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</layout>
